--- a/.gitignore
+++ b/.gitignore
@@ -34,10 +34,9 @@ yarn-error.log*
 .env*
 
 # vercel
-.vercel
+.vercel/*
+!.vercel/project.json
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
-.vercel
