--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/three": "^0.180.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "lefthook": "^1.13.4",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "typescript": "^5.9.2"
