--- a/lefthook.yml
+++ b/lefthook.yml
@@ -4,6 +4,8 @@ pre-commit:
     run: "npx eslint 'src/**/*.{js,ts,tsx}'"
   prettier:
     run: "npx prettier --check 'src/**/*.{js,ts,tsx,css,scss,md}'"
+  typescript:
+    run: "npx tsc --noEmit"
   parallel: true
 
 pre-push:
