--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,5 @@
-{"projectId":"prj_Y7Kk868Uzku3atOUEod7gKPVYWbL","orgId":"team_GaxpgzdPwDjypYnucnEIoL3Y","projectName":"palantir"}
+{
+  "projectId": "prj_Y7Kk868Uzku3atOUEod7gKPVYWbL",
+  "orgId": "team_GaxpgzdPwDjypYnucnEIoL3Y",
+  "projectName": "palantir"
+}
