--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.34",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "styled-components": "^6.1.19",
     "three": "^0.180.0"
   },
   "devDependencies": {
